# kg-search

./: .env  .env.example  README.md  main.py  pyproject.toml
data/: .gitkeep  4.json
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: README.md
scripts/: build_index.py  init_neo4j.py  seed_data.py
src/kg_search/: __init__.py
src/kg_search/api/: __init__.py  dependencies.py  main.py
src/kg_search/api/routes/: __init__.py  health.py  ingest.py  search.py
src/kg_search/api/schemas/: __init__.py  request.py  response.py
src/kg_search/config/: __init__.py  settings.py
src/kg_search/extraction/: __init__.py  entity_extractor.py  graph_builder.py  models.py  relation_extractor.py  similarity_generator.py  structured_extractor.py  types.py
src/kg_search/extraction/prompts/: __init__.py  entity_prompt.py  relation_prompt.py
src/kg_search/extraction/utils/: __init__.py  date_normalizer.py  text_converter.py
src/kg_search/graphrag/: __init__.py  adapter.py  config.py  extractors.py  searchers.py
src/kg_search/indexing/: __init__.py  document_store.py  graph_store.py  vector_store.py
src/kg_search/ingestion/: __init__.py  pipeline.py
src/kg_search/ingestion/chunkers/: __init__.py  base.py  multi_view_chunker.py  recursive_chunker.py  (+2 more)
src/kg_search/llm/: __init__.py  client.py  embeddings.py  generator.py
src/kg_search/retrieval/: __init__.py  graph_retriever.py  hybrid_retriever.py  vector_retriever.py
src/kg_search/utils/: __init__.py  helpers.py  logger.py
tests/: conftest.py  test_1json_loading.py  test_api.py  test_extraction.py  test_indexing.py  test_ingestion.py  test_retrieval.py
(+8 files in other folders)
