[project]
name = "kg-search"
version = "0.1.0"
description = "文博领域数字文物库智能检索系统 - 基于GraphRAG + 向量相似度的混合检索"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # 向量数据库
    "chromadb>=0.4.22",
    
    # 图数据库
    "neo4j>=5.17.0",
    
    # LLM & Embedding
    "openai>=1.12.0",
    "tiktoken>=0.6.0",
    
    # 数据处理
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    
    # 工具
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "httpx>=0.26.0",
    
    # 社区检测 (GraphRAG Global Search)
    "networkx>=3.2.0",
    "graspologic>=3.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
kg-search = "kg_search.api.main:run"
kg-build = "scripts.build_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kg_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # 忽略行过长（中文prompt字符串）

[tool.ruff.lint.per-file-ignores]
"src/kg_search/extraction/prompts/*.py" = ["E501"]
"src/kg_search/retrieval/strategies/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
